@@ -112,6 +112,8 @@ User Interface
 - Toolbar buttons appear in color when entered.  See the
   `activeButtonColorKey' resource for details.
 
+- The `Insert' key toggles text insertion mode.
+
 - The function keys F2-F9 are bound to frequently used commands:
 
 	F2 Run
